--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,9 +1,6 @@
 # A generic, single database configuration.
 
 [alembic]
-# path to migration scripts
-script_location = alembic
-
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
@@ -11,12 +8,10 @@ script_location = alembic
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
-
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root,sqlalchemy,alembic,flask_migrate
 
 [handlers]
 keys = console
@@ -38,6 +33,11 @@ qualname = sqlalchemy.engine
 level = INFO
 handlers =
 qualname = alembic
+
+[logger_flask_migrate]
+level = INFO
+handlers =
+qualname = flask_migrate
 
 [handler_console]
 class = StreamHandler
