--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-requests==2.0.1
-Flask==0.10.1
-flask_sqlalchemy
-markdown2
-beautifulsoup4
-gunicorn
-psycopg2
-alembic
+requests==2.31.0
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Flask-CORS==4.0.0
+Flask-Migrate==4.0.5
+Flask-RESTful==0.3.10
+PyGithub==2.1.1
+markdown2==2.4.10
+beautifulsoup4==4.12.2
+gunicorn==21.2.0
+psycopg2-binary==2.9.7
+alembic==1.12.1
+pytest==7.4.3
+pytest-flask==1.3.0
